--- a/templates/medtime.html
+++ b/templates/medtime.html
@@ -7,12 +7,16 @@
     <style>
         .table-container {
         overflow-y: auto;
-        max-height: 1000px; /* Укажите максимальную высоту контейнера, чтобы при прокрутке появлялась полоса прокрутки */
+        max-height: 800px; /* Укажите максимальную высоту контейнера, чтобы при прокрутке появлялась полоса прокрутки */
+        max-width: 700px; /* Задаем максимальную ширину контейнера */
+        margin: 0 auto; /* Центрируем контейнер по горизонтали */
+        overflow-x: auto;
         }
 
         table {
         width: 100%; /* Обязательно укажите ширину таблицы, чтобы она занимала всю доступную ширину контейнера */
         border-collapse: collapse;
+        table-layout: fixed;
         }
 
         thead {
@@ -23,9 +27,12 @@
         }
 
         th, td {
+<!--        white-space: nowrap; /* Запрещаем перенос текста */-->
         padding: 8px;
+        font-size: 14px; /* Пример уменьшения размера текста */
         text-align: left;
         border-bottom: 1px solid #ddd;
+
         }
 
         tr:hover {
