Добавление функций и правки

--- a/templates/openers.html
+++ b/templates/openers.html
@@ -8,11 +8,15 @@
         .table-container {
         overflow-y: auto;
         max-height: 800px; /* Укажите максимальную высоту контейнера, чтобы при прокрутке появлялась полоса прокрутки */
+        max-width: 850px; /* Задаем максимальную ширину контейнера */
+        margin: 0 auto; /* Центрируем контейнер по горизонтали */
+        overflow-x: auto;
         }
 
         table {
         width: 100%; /* Обязательно укажите ширину таблицы, чтобы она занимала всю доступную ширину контейнера */
         border-collapse: collapse;
+        table-layout: fixed;
         }
 
         thead {
