Добавление функций и правки

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,8 +81,15 @@
             <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
                 <button type="submit" name="change_data" class="btn btn-info">Обновить данные</button>
             </div>
-
+            <br>
+            <br>
+            <br>
+            <div class="button-container">
+                <a href="https://analytic.neural-university.ru/" class="btn btn-outline-success" role="button" aria-pressed="true">В меню аналитики</a>
+            </div>
         </form>
+
+
     </div>
     <div class="form-openers">
         <p><strong>Выберите опенеров:</strong></p>
