--- a/templates/openers.html
+++ b/templates/openers.html
@@ -95,6 +95,12 @@
         margin-left: 40px;
 
         }
+        button.btn-outline-info {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        }
         select {
         height: 200px; /* Установите желаемую высоту */
         width: 220px;
@@ -142,6 +148,10 @@
         </form>
     </div>
 </div>
+<form action="{{ url_for('calls_openers') }}" method="post">
+    <button type="submit" class="btn btn-outline-info" name="changetype">Сменить вид: простой/детальный
+    </button>
+</form>
 <br>
 <!-- Вставляем таблицу с помощью переменной table -->
 <div class="table-container">
