--- a/templates/openerhours.html
+++ b/templates/openerhours.html
@@ -71,7 +71,7 @@
         }
         /* Стилизация контейнера формы */
         .form-container {
-        max-width: 560px; /* Максимальная ширина контейнера (примерное значение, можно изменить) */
+        max-width: 750px; /* Максимальная ширина контейнера (примерное значение, можно изменить) */
         display: flex;
         margin: 0 auto;
         padding: 20px; /* Добавление внутренних отступов для внешнего вида */
@@ -88,13 +88,17 @@
         }
 
         }
+        .form-data{
+        order: 1;
+        margin-left: 0px;
+        }
         .form-openers{
-        order:1;
+        order:2;
         margin-left: 40px;
 
         }
         .form-numbers{
-        order:2;
+        order:3;
         margin-left: 40px;
 
         }
@@ -108,7 +112,34 @@
 </head>
 <body>
 <h1 align="center">Опенер-часы (% дозвонов)</h1>
+<div align="center">{%if datarange%}
+    {{datarange}}
+    {%endif%}
+</div>
+{% if message %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    <p align="center">{{ message }}</p>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+{%endif%}
+<hr>
 <div class="form-container">
+    <div class="form-data">
+        <p><strong>Выберите диапазон данных:</strong></p>
+        <form action="{{ url_for('calls_openerhour') }}" method="post">
+            <label for="start_date">Дата начала:</label>
+            <input type="date" class="form-control" id="start_date" name="start_date" required>
+            <label for="end_date">Дата конца:</label>
+            <input type="date" class="form-control" id="end_date" name="end_date" required>
+            <div class="button-container"> <!-- Дополнительный контейнер для кнопки -->
+                <button type="submit" name="change_data" class="btn btn-info">Обновить данные</button>
+            </div>
+
+        </form>
+
+    </div>
     <div class="form-openers">
         <p><strong>Выберите опенеров:</strong></p>
         <form action="{{ url_for('calls_openerhour') }}" method="post">
@@ -195,5 +226,14 @@
 
 
 </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
